fixed form spacing on medium mobile breakpoint

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -490,6 +490,12 @@ input:checked ~ .accordion-content {
 }
 
 /* Media queries */
+@media screen and (min-width: 375px) {
+  .form {
+    width: 20rem;
+  }
+}
+
 @media screen and (min-width: 425px) {
   figure {
     margin-left: 0;
